--- a/examples/kubernetes-batch-demo/workflows/bidirectional-test-workflow.yaml
+++ b/examples/kubernetes-batch-demo/workflows/bidirectional-test-workflow.yaml
@@ -1,19 +1,22 @@
 schema: https://stepflow.org/schemas/v1/flow.json
 name: bidirectional-test-workflow
 description: Test bidirectional components with blob storage
-input_schema:
+schemas:
   type: object
   properties:
-    data:
+    input:
       type: object
-      description: Data to store as blob
-output_schema:
-  type: object
-  properties:
-    blob_id:
-      type: string
-    retrieved_data:
+      properties:
+        data:
+          type: object
+          description: Data to store as blob
+    output:
       type: object
+      properties:
+        blob_id:
+          type: string
+        retrieved_data:
+          type: object
 steps:
 - id: blob_test
   component: /python/store_and_retrieve_blob
