--- a/tests/python/udf_text_processing.yaml
+++ b/tests/python/udf_text_processing.yaml
@@ -1,20 +1,23 @@
 schema: https://stepflow.org/schemas/v1/flow.json
-input_schema:
+schemas:
   type: object
   properties:
-    pattern:
-      type: string
-    text:
-      type: string
-output_schema:
-  type: object
-  properties:
-    pattern_matches:
-      type: array
-    sentiment_score:
-      type: number
-    word_analysis:
+    input:
       type: object
+      properties:
+        pattern:
+          type: string
+        text:
+          type: string
+    output:
+      type: object
+      properties:
+        pattern_matches:
+          type: array
+        sentiment_score:
+          type: number
+        word_analysis:
+          type: object
 steps:
 - id: create_word_analysis_blob
   component: /builtin/put_blob
