--- a/tests/mock/error_fail.yaml
+++ b/tests/mock/error_fail.yaml
@@ -1,11 +1,14 @@
 schema: https://stepflow.org/schemas/v1/flow.json
-input_schema:
-  type: object
-output_schema:
+schemas:
   type: object
   properties:
-    result:
-      type: string
+    input:
+      type: object
+    output:
+      type: object
+      properties:
+        result:
+          type: string
 steps:
 - id: error
   component: /mock/error
