refactor: Deduplicate StepflowConfig definitions
Move MockPlugin support to stepflow-config crate and update CLI to use
the shared StepflowConfig from stepflow-config instead of its own
duplicate definition.

Closes #470

--- a/stepflow-rs/crates/stepflow-cli/Cargo.toml
+++ b/stepflow-rs/crates/stepflow-cli/Cargo.toml
@@ -25,6 +25,7 @@ serde_json.workspace = true
 serde_yaml_ng.workspace = true
 stepflow-analysis.workspace = true
 stepflow-builtins.workspace = true
+stepflow-config.workspace = true
 stepflow-components-mcp.workspace = true
 stepflow-core.workspace = true
 stepflow-execution.workspace = true
